Add images and float styling to both images and sidebar
Co-authored-by: JaredGran <jared.carper@gmail.com>

--- a/index.html
+++ b/index.html
@@ -4,7 +4,24 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/styles.css" />
+    <title>Savage Avengers</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Savage Avengers</h1>
+    <p>
+      The best band in the galaxy. Maybe the best in the universe, not totally
+      sure.
+    </p>
+    <div class="sidebar">
+      <p>Upcoming Shows</p>
+      <ul>
+        <li>May 31, 2022</li>
+        <li>June 10, 2022</li>
+        <li>July 2, 2022</li>
+      </ul>
+    </div>
+    <img src="./img/pexels-josh-sorenson-995301.jpg" alt="Drums closeup" />
+    <img src="./img/pexels-thibault-trillet-167636.jpg" alt="Band on stage" />
+  </body>
 </html>
