Add images and float styling to both images and sidebar
Co-authored-by: JaredGran <jared.carper@gmail.com>

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <li>May 31, 2022</li>
         <li>June 10, 2022</li>
         <li>July 2, 2022</li>
+        <li>August 3, 2022</li>
       </ul>
     </div>
     <img src="./img/pexels-josh-sorenson-995301.jpg" alt="Drums closeup" />
